--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="grid">
 
+<body>
+    <div class="header">Etch-a-Sketch</div>
+    <div class="app">
+        <div class="app__option">
+            <div class="app__option__icon">⚙️</div>
+            <button class="app__option__btn" id="changeSize">CHANGE SIZE</button>
+            <button class="app__option__btn" id="clear">CLEAR</button>
+        </div>
+
+        <div class="grid"></div>
     </div>
 
-    <script src="script.js">
+    
 
-    </script>
+
+    <script src="script.js"/>
+    
 </body>
 </html>
