--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,8 +12,10 @@
     <div class="header">Etch-a-Sketch</div>
     <div class="app">
         <div class="app__option">
-            <div class="app__option__icon">⚙️</div>
+            <!-- <div class="app__option__icon">CONFIG</div> -->
             <button class="app__option__btn" id="changeSize">CHANGE SIZE</button>
+            <button class="app__option__btn" id="black">BLACK PAINT</button>
+            <button class="app__option__btn" id="rainbow">RAINBOW PAINT</button>
             <button class="app__option__btn" id="clear">CLEAR</button>
         </div>
 
